--- a/Hospital.WEB/Views/Patient/Index.cshtml
+++ b/Hospital.WEB/Views/Patient/Index.cshtml
@@ -540,7 +540,7 @@
 
         opt.value = doctorId;
         opt.innerHTML = doctorNameSurname;
-        opt.selected = "selected"
+        opt.selected = "selected";
         select.appendChild(opt);
     }
 
